<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 NetFoundry. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/background">

        <ImageView
            android:id="@+id/BackConfigButton"
            android:visibility="gone"
            android:layout_width="12dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/BackConfigButton2"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:clickable="true"
            android:lineHeight="20dp"
            android:paddingLeft="36dp"
            android:text="@string/back"
            android:textColor="@color/link"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/SaveButton"
            android:layout_width="104dp"
            android:layout_height="19dp"
            android:layout_marginEnd="24dp"
            android:gravity="right"
            android:clickable="true"
            android:lineHeight="20dp"
            android:paddingLeft="36dp"
            android:text="@string/save"
            android:textAlignment="gravity"
            android:textColor="@color/link"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="18dp"
            android:text="@string/tunnel"
            android:textColor="@color/title"
            android:textSize="26dp"
            android:fontFamily="@font/russo_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:lineHeight="22dp"
                android:paddingLeft="18dp"
                android:text="@string/ip"
                android:textColor="@color/title"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">
            </TextView>
            <TextView
                android:id="@+id/IPInput"
                android:textAlignment="gravity"
                android:gravity="right"
                android:textColor="@color/title"
                android:paddingRight="18dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="22dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:lineHeight="22dp"
                android:paddingLeft="18dp"
                android:text="@string/subnet"
                android:textColor="@color/title"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">
            </TextView>
            <TextView
                android:id="@+id/SubNetInput"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_gravity="center"
                android:textColor="@color/title"
                android:paddingRight="18dp"
                android:background="@android:color/transparent"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="22dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:lineHeight="22dp"
                android:paddingLeft="18dp"
                android:text="@string/mtu"
                android:textColor="@color/title"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">
            </TextView>
            <TextView
                android:id="@+id/MTUInput"
                android:textAlignment="gravity"
                android:gravity="right"
                android:textColor="@color/title"
                android:paddingRight="18dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="22dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:lineHeight="60dp"
                android:paddingLeft="18dp"
                android:text="@string/dns"
                android:textColor="@color/title"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"></TextView>

            <TextView
                android:id="@+id/DNSInput"
                android:layout_marginStart="20dp"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@color/title"
                android:layout_width="match_parent"
                android:layout_height="22dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>